# etl_pipelines

./: alembic.ini  docker-compose.yml  dockerfile  entrypoint.sh  main.py  readme.md  requirements.txt
src/: config.py  logger.py  pyproject.toml
src/database/: __init__.py  sessions.py
src/database/migrations/: env.py
src/database/migrations/versions/: b5107b7d74ee_create_table_transactional_data.py  ea10c426a4d8_change_cpf_column.py
src/transactional_data/: model.py  schema.py
src/transactional_data/scripts/: extract.py  load.py  transform.py
